=====================================
Version 0.083 - 2014/10/13 by Kenneth
=====================================
New Features, Improvements
--------------------------
* Added integration test for sensor module and SIM908 module in main function
* Added loop-back to PC option in SIM908 driver using UART1

Fixed Bugs, Changes
-------------------
* Renamed SIM908_gsm to SIM908, as this driver will be for the whole module
* SIM908_init() structure changes, so that it only initiates the module
* SIM908_start() function added to setup the module
* GPS started and reset in SIM908_start();

ToDo
----	
- MISRA check all files
- missing commenting in btn_led_lcd and led_on_plane
- Split up module test in individual file, instead of having it in main


=====================================
Version 0.082 - 2014/10/07 by Kenneth
=====================================
New Features, Improvements
--------------------------
* Added timeout check in call_PSAP function in SIM908 driver
* Added timeout check for AT response in SIM908 driver
* New structure/optimized the driver, so that no busy waiting in SIM908_cmd function is needed 
* Added some relevant AT commands in header file
* Added baud sync and setup commands in SIM908 init function
* Added doxygen comments in SIM908 driver and Timer

Fixed Bugs, Changes
-------------------
* Removed timeout in SIM908 init function
* Removed unit test of _SIM908_check_response function in SIM908 driver, as it didn't maked sense anymore

ToDo
----	
- MISRA check all files
- missing commenting in btn_led_lcd and led_on_plane
- Split up module test in individual file, instead of having it in main


=====================================
Version 0.081 - 2014/10/01 by Kenneth
=====================================
New Features, Improvements
--------------------------
* In timer.c: Added timer 3 in CTC mode for counting a value used in timeout check
* In SIM908 driver: Added timeout check in init function